# PDK_QFoundry

./: .gitignore  API_REFERENCE.md  QUICK_REFERENCE.md  README.md  developper.md  install.bat  pyproject.toml  teams_calendar_notion.csv
klayout_PDK/tech/: KQCircuits.lyp  Starfish.lyp  Starfish.lyt  qfoundry.lyp  qfoundry.lyt  setup.py
klayout_PDK/tech/drc/: drc.lydrc
klayout_PDK/tech/pymacros/: include_packages.lym  pcell_python.lym  starfish.xs
klayout_PDK/tech/pymacros/qfoundry/: setup.py
klayout_PDK/tech/pymacros/qfoundry/chips/: FrameMPDK5mm.py  FrameQ10.lym  FrameQ10.py  (+2 more)
klayout_PDK/tech/pymacros/scripted_layouts/: example_array_dose.py  example_array_junctions.py
klayout_PDK/tech/pymacros/starfish/: Starfish_pchip_library.lym  defaults.py  file1.py  file2.py  setup.py
klayout_PDK/tech/pymacros/starfish.egg-info/: PKG-INFO  SOURCES.txt
klayout_PDK/tech/starfish/chips/: chip_francisco.py
qfoundry/: DFT.xml  __init__
qfoundry/tech/: default.lyp  qfoundry.lyp  qfoundry.lyt  qfoundry.xs
qfoundry/tech/d25/: d25.lyd25
qfoundry/tech/drc/: drc.lydrc  drc_QW.lydrc  drc_config.lydrc  drc_modular.lydrc  drc_qfoundry.lydrc
qfoundry/tech/gds/: AlignementMarks.gds  TIIQRC_logo.gds
qfoundry/tech/macros/: register_shortcuts.lym
qfoundry/tech/pymacros/: __init__  include_packages.lym.bak  install_module.lym  library.lym  menu.lym
qfoundry/tech/pymacros/qfoundry/: __init__.py  _version.py  defaults.py  utils.py
qfoundry/tech/pymacros/scripted_layouts/: example_array_dose.py  example_array_junctions.py
qfoundry/tech/xsect/: qfoundry.lyp  qfoundry.xs
(+42 files in other folders)
