[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "qfoundry-pdk"
dynamic = ["version"]
description = "TII QFoundry PDK for superconducting qubit fabrication with KLayout/KQCircuits"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["qfoundry/tech/pymacros"]

[tool.setuptools_scm]
# Derive version from git tags (e.g. v1.2.3 → 1.2.3).
# Between tags, the version is auto-incremented and annotated with git metadata.
# Version scheme examples:
#   v1.2.3           → 1.2.3          (on tagged commit)
#   v1.2.3 + 5 commits → 1.2.4.dev5+gabcdef  (after the tag)
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0+unknown"
